# openclam

./: .gitignore  AGENT.md  CMakeLists.txt  SESSION_DESIGN.md  cefclient_mac.mm
agent/: agent_loop.cc  agent_loop.h  anthropic_client.cc  anthropic_client.h  browser_action_dispatcher.h  browser_action_dispatcher.mm  gemini_client.cc  gemini_client.h  id_utils.h  llm_client.h  llm_factory.cc  messages.h  openai_client.cc  openai_client.h  session.cc  session.h  session_manager.cc  session_manager.h  session_store.cc  session_store.h  types.h
browser/: base_client_handler.cc  base_client_handler.h  binary_transfer_test.cc  binary_transfer_test.h  binding_test.cc  binding_test.h  browser_window.cc  browser_window.h  browser_window_osr_mac.h  browser_window_osr_mac.mm  browser_window_std_mac.h  browser_window_std_mac.mm  bytes_write_handler.cc  client_app_delegates_browser.cc  client_browser.cc  client_browser.h  client_handler.cc  client_handler.h  client_handler_osr.cc  client_handler_osr.h  client_handler_std.cc  client_handler_std.h  client_prefs.cc  config_test.cc  config_test.h  default_client_handler.cc  default_client_handler.h  dialog_test.cc  dialog_test.h  hang_test.cc  hang_test.h  image_cache.cc  main_context.h  main_context_impl.cc  main_context_impl.h  media_router_test.cc  media_router_test.h  openclam_scheme_handler.h  openclam_scheme_handler.mm  osr_accessibility_helper.cc  (+42 more)
common/: client_app_delegates_common.cc  scheme_test_common.cc
frontend/sessions/: index.html  package.json
frontend/sessions/src/: App.vue
frontend/tabs_chat/: index.html  package.json
frontend/tabs_chat/src/: App.vue
renderer/: client_app_delegates_renderer.cc  client_renderer.cc  client_renderer.h  ipc_performance_test.cc  ipc_performance_test.h  performance_test.cc  performance_test.h  performance_test_tests.cc
shared/: process_helper_mac.cc
shared/browser/: client_app_browser.cc  client_app_browser.h  file_util.cc  geometry_util.cc  main_message_loop_external_pump.cc  main_message_loop_external_pump.h  main_message_loop_external_pump_mac.mm  main_message_loop_std.cc  main_message_loop_std.h  resource_util_mac.mm  resource_util_posix.cc
shared/common/: binary_value_utils.cc  client_app.cc  client_app_other.cc  client_app_other.h  client_switches.cc  string_util.cc
shared/renderer/: client_app_renderer.cc  client_app_renderer.h
tests/cefclient/browser/: openclam_scheme_handler.h  root_window.h  root_window_mac.h
